--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
         "php": ">=7.4",
         "composer/installers": "~1.0"
     },
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
+    }
 }
